// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Given <App /> > Should render correctly  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app-wrapper montserrat-font"
      >
        <nav>
          <div
            class="w-full flex flex-col"
          >
            <div
              class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
            >
              <h1
                class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
              >
                Shopkeeper
              </h1>
              <span
                class="flex"
              >
                <a
                  href="/"
                >
                  <img
                    alt="company logo"
                    class=" tablet:w-16 mobile:w-9"
                    src="/shopkeeper-logo.svg"
                  />
                </a>
              </span>
              <button
                class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
              >
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
                />
              </button>
              <div
                class="mobile:hidden page-links tablet:flex relative items-center"
              >
                <a
                  class="home-link border-r px-4 mr-2"
                  href="/"
                >
                  <div
                    tabindex="0"
                  >
                    Home
                  </div>
                </a>
                <a
                  class="shop-link border-r px-4 pl-4 mr-2"
                  href="/shop"
                >
                  <div
                    tabindex="0"
                  >
                    Shop
                  </div>
                </a>
                <button
                  class="cart pl-4"
                >
                  <img
                    alt="cart"
                    class="w-8"
                    src="/icons/cart.svg"
                    tabindex="0"
                  />
                  <p
                    class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                  >
                    0
                  </p>
                </button>
              </div>
            </div>
            <div>
              <p
                class="bg-black text-white tablet:text-sm mobile:text-xs"
              >
                Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
              </p>
            </div>
          </div>
        </nav>
        <main>
          <div
            class="homepage-wrapper"
          >
            <div
              class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
            >
              <div
                class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
              >
                <h1
                  class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Shop Smart, Shop Easy!
                </h1>
                <p
                  class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
                </p>
                <div
                  class="mobile:mb-6 desktop:mb-0"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  <a
                    class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                    href="/shop"
                  >
                    Shop Now
                  </a>
                </div>
              </div>
              <div
                class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
              >
                <img
                  alt="shopping image"
                  class="shopping-image tablet:min-h-[46vh]"
                  src="/shopping.svg"
                  style="opacity: 0; transform: translateY(-50px);"
                />
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app-wrapper montserrat-font"
    >
      <nav>
        <div
          class="w-full flex flex-col"
        >
          <div
            class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
          >
            <h1
              class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
            >
              Shopkeeper
            </h1>
            <span
              class="flex"
            >
              <a
                href="/"
              >
                <img
                  alt="company logo"
                  class=" tablet:w-16 mobile:w-9"
                  src="/shopkeeper-logo.svg"
                />
              </a>
            </span>
            <button
              class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
            >
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
              />
            </button>
            <div
              class="mobile:hidden page-links tablet:flex relative items-center"
            >
              <a
                class="home-link border-r px-4 mr-2"
                href="/"
              >
                <div
                  tabindex="0"
                >
                  Home
                </div>
              </a>
              <a
                class="shop-link border-r px-4 pl-4 mr-2"
                href="/shop"
              >
                <div
                  tabindex="0"
                >
                  Shop
                </div>
              </a>
              <button
                class="cart pl-4"
              >
                <img
                  alt="cart"
                  class="w-8"
                  src="/icons/cart.svg"
                  tabindex="0"
                />
                <p
                  class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                >
                  0
                </p>
              </button>
            </div>
          </div>
          <div>
            <p
              class="bg-black text-white tablet:text-sm mobile:text-xs"
            >
              Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
            </p>
          </div>
        </div>
      </nav>
      <main>
        <div
          class="homepage-wrapper"
        >
          <div
            class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
          >
            <div
              class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
            >
              <h1
                class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                style="opacity: 0; transform: translateY(50px);"
              >
                Shop Smart, Shop Easy!
              </h1>
              <p
                class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                style="opacity: 0; transform: translateY(50px);"
              >
                Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
              </p>
              <div
                class="mobile:mb-6 desktop:mb-0"
                style="opacity: 0; transform: translateY(50px);"
              >
                <a
                  class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                  href="/shop"
                >
                  Shop Now
                </a>
              </div>
            </div>
            <div
              class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
            >
              <img
                alt="shopping image"
                class="shopping-image tablet:min-h-[46vh]"
                src="/shopping.svg"
                style="opacity: 0; transform: translateY(-50px);"
              />
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given <App /> > Should render correctly if the fetch request is successful  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app-wrapper montserrat-font"
      >
        <nav>
          <div
            class="w-full flex flex-col"
          >
            <div
              class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
            >
              <h1
                class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
              >
                Shopkeeper
              </h1>
              <span
                class="flex"
              >
                <a
                  href="/"
                >
                  <img
                    alt="company logo"
                    class=" tablet:w-16 mobile:w-9"
                    src="/shopkeeper-logo.svg"
                  />
                </a>
              </span>
              <button
                class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
              >
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
                />
              </button>
              <div
                class="mobile:hidden page-links tablet:flex relative items-center"
              >
                <a
                  class="home-link border-r px-4 mr-2"
                  href="/"
                >
                  <div
                    tabindex="0"
                  >
                    Home
                  </div>
                </a>
                <a
                  class="shop-link border-r px-4 pl-4 mr-2"
                  href="/shop"
                >
                  <div
                    tabindex="0"
                  >
                    Shop
                  </div>
                </a>
                <button
                  class="cart pl-4"
                >
                  <img
                    alt="cart"
                    class="w-8"
                    src="/icons/cart.svg"
                    tabindex="0"
                  />
                  <p
                    class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                  >
                    0
                  </p>
                </button>
              </div>
            </div>
            <div>
              <p
                class="bg-black text-white tablet:text-sm mobile:text-xs"
              >
                Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
              </p>
            </div>
          </div>
        </nav>
        <main>
          <div
            class="homepage-wrapper"
          >
            <div
              class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
            >
              <div
                class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
              >
                <h1
                  class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Shop Smart, Shop Easy!
                </h1>
                <p
                  class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
                </p>
                <div
                  class="mobile:mb-6 desktop:mb-0"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  <a
                    class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                    href="/shop"
                  >
                    Shop Now
                  </a>
                </div>
              </div>
              <div
                class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
              >
                <img
                  alt="shopping image"
                  class="shopping-image tablet:min-h-[46vh]"
                  src="/shopping.svg"
                  style="opacity: 0; transform: translateY(-50px);"
                />
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app-wrapper montserrat-font"
    >
      <nav>
        <div
          class="w-full flex flex-col"
        >
          <div
            class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
          >
            <h1
              class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
            >
              Shopkeeper
            </h1>
            <span
              class="flex"
            >
              <a
                href="/"
              >
                <img
                  alt="company logo"
                  class=" tablet:w-16 mobile:w-9"
                  src="/shopkeeper-logo.svg"
                />
              </a>
            </span>
            <button
              class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
            >
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
              />
            </button>
            <div
              class="mobile:hidden page-links tablet:flex relative items-center"
            >
              <a
                class="home-link border-r px-4 mr-2"
                href="/"
              >
                <div
                  tabindex="0"
                >
                  Home
                </div>
              </a>
              <a
                class="shop-link border-r px-4 pl-4 mr-2"
                href="/shop"
              >
                <div
                  tabindex="0"
                >
                  Shop
                </div>
              </a>
              <button
                class="cart pl-4"
              >
                <img
                  alt="cart"
                  class="w-8"
                  src="/icons/cart.svg"
                  tabindex="0"
                />
                <p
                  class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                >
                  0
                </p>
              </button>
            </div>
          </div>
          <div>
            <p
              class="bg-black text-white tablet:text-sm mobile:text-xs"
            >
              Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
            </p>
          </div>
        </div>
      </nav>
      <main>
        <div
          class="homepage-wrapper"
        >
          <div
            class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
          >
            <div
              class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
            >
              <h1
                class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                style="opacity: 0; transform: translateY(50px);"
              >
                Shop Smart, Shop Easy!
              </h1>
              <p
                class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                style="opacity: 0; transform: translateY(50px);"
              >
                Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
              </p>
              <div
                class="mobile:mb-6 desktop:mb-0"
                style="opacity: 0; transform: translateY(50px);"
              >
                <a
                  class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                  href="/shop"
                >
                  Shop Now
                </a>
              </div>
            </div>
            <div
              class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
            >
              <img
                alt="shopping image"
                class="shopping-image tablet:min-h-[46vh]"
                src="/shopping.svg"
                style="opacity: 0; transform: translateY(-50px);"
              />
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given <App /> > Should render the loading screen if the fetch request fails  1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="app-wrapper montserrat-font"
      >
        <nav>
          <div
            class="w-full flex flex-col"
          >
            <div
              class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
            >
              <h1
                class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
              >
                Shopkeeper
              </h1>
              <span
                class="flex"
              >
                <a
                  href="/"
                >
                  <img
                    alt="company logo"
                    class=" tablet:w-16 mobile:w-9"
                    src="/shopkeeper-logo.svg"
                  />
                </a>
              </span>
              <button
                class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
              >
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
                />
                <span
                  class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
                />
              </button>
              <div
                class="mobile:hidden page-links tablet:flex relative items-center"
              >
                <a
                  class="home-link border-r px-4 mr-2"
                  href="/"
                >
                  <div
                    tabindex="0"
                  >
                    Home
                  </div>
                </a>
                <a
                  class="shop-link border-r px-4 pl-4 mr-2"
                  href="/shop"
                >
                  <div
                    tabindex="0"
                  >
                    Shop
                  </div>
                </a>
                <button
                  class="cart pl-4"
                >
                  <img
                    alt="cart"
                    class="w-8"
                    src="/icons/cart.svg"
                    tabindex="0"
                  />
                  <p
                    class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                  >
                    0
                  </p>
                </button>
              </div>
            </div>
            <div>
              <p
                class="bg-black text-white tablet:text-sm mobile:text-xs"
              >
                Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
              </p>
            </div>
          </div>
        </nav>
        <main>
          <div
            class="homepage-wrapper"
          >
            <div
              class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
            >
              <div
                class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
              >
                <h1
                  class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Shop Smart, Shop Easy!
                </h1>
                <p
                  class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                  style="opacity: 0; transform: translateY(50px);"
                >
                  Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
                </p>
                <div
                  class="mobile:mb-6 desktop:mb-0"
                  style="opacity: 0; transform: translateY(50px);"
                >
                  <a
                    class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                    href="/shop"
                  >
                    Shop Now
                  </a>
                </div>
              </div>
              <div
                class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
              >
                <img
                  alt="shopping image"
                  class="shopping-image tablet:min-h-[46vh]"
                  src="/shopping.svg"
                  style="opacity: 0; transform: translateY(-50px);"
                />
              </div>
            </div>
            <div
              class="flex items-center justify-evenly p-8 mt-10 text-5xl"
              style="opacity: 0; will-change: opacity;"
            >
              <img
                alt="down arrow"
                class="mobile:hidden tablet:flex tablet:w-16 desktop:w-20 bounce"
                src="/icons/down-arrow.svg"
              />
              <h5
                class="tablet:hidden text-3xl"
              >
                Our current best deals:
              </h5>
              <h1
                class="mobile:hidden tablet:inline-block tablet:text-3xl desktop:text-5xl"
              >
                Click 
                <button
                  class="font-bold text-[#FFBF00]"
                >
                  here
                </button>
                 and see our best deals right now!
              </h1>
              <img
                alt="down arrow"
                class="mobile:hidden tablet:flex tablet:w-16 desktop:w-20 bounce"
                src="/icons/down-arrow.svg"
              />
            </div>
            <div
              class="bg-white flex flex-wrap"
            >
              <div
                class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
              >
                <div
                  class="flex flex-col h-full"
                >
                  <img
                    alt="item image"
                    class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                    src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
                  />
                </div>
                <div
                  class="flex-col flex text-left"
                >
                  <p
                    class="pt-8 self-start"
                  >
                    Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
                  </p>
                  <div
                    class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                  >
                    <p
                      class="font-semibold "
                    >
                      <span
                        class="line-through text-red-500"
                      >
                        £
                        109.95
                      </span>
                      <span>
                          £
                        98.95
                         
                      </span>
                    </p>
                    <p
                      class="flex mobile:pt-2 desktop:p-0"
                    >
                      <div>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gray; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gray; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                      </div>
                      (
                      120
                      )
                    </p>
                  </div>
                  <button
                    class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                    tabindex="0"
                  >
                    Add To Cart
                  </button>
                </div>
              </div>
              <div
                class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
              >
                <div
                  class="flex flex-col h-full"
                >
                  <img
                    alt="item image"
                    class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                    src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
                  />
                </div>
                <div
                  class="flex-col flex text-left"
                >
                  <p
                    class="pt-8 self-start"
                  >
                    Mens Casual Premium Slim Fit T-Shirts 
                  </p>
                  <div
                    class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                  >
                    <p
                      class="font-semibold "
                    >
                      <span
                        class="line-through text-red-500"
                      >
                        £
                        22.3
                      </span>
                      <span>
                          £
                        20.07
                         
                      </span>
                    </p>
                    <p
                      class="flex mobile:pt-2 desktop:p-0"
                    >
                      <div>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gray; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                      </div>
                      (
                      259
                      )
                    </p>
                  </div>
                  <button
                    class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                    tabindex="0"
                  >
                    Add To Cart
                  </button>
                </div>
              </div>
              <div
                class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
              >
                <div
                  class="flex flex-col h-full"
                >
                  <img
                    alt="item image"
                    class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                    src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
                  />
                </div>
                <div
                  class="flex-col flex text-left"
                >
                  <p
                    class="pt-8 self-start"
                  >
                    Mens Cotton Jacket
                  </p>
                  <div
                    class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                  >
                    <p
                      class="font-semibold "
                    >
                      <span
                        class="line-through text-red-500"
                      >
                        £
                        55.99
                      </span>
                      <span>
                          £
                        50.39
                         
                      </span>
                    </p>
                    <p
                      class="flex mobile:pt-2 desktop:p-0"
                    >
                      <div>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gold; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                        <span
                          class="start"
                          style="cursor: pointer; color: gray; font-size: 15px;"
                        >
                           
                          ★
                           
                        </span>
                      </div>
                      (
                      500
                      )
                    </p>
                  </div>
                  <button
                    class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                    tabindex="0"
                  >
                    Add To Cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="app-wrapper montserrat-font"
    >
      <nav>
        <div
          class="w-full flex flex-col"
        >
          <div
            class="nav-bar bg-white p-6 flex flex-row border-b-2 border-gray-500 justify-between items-center"
          >
            <h1
              class="flex company-name bebas-neue-regular tablet:text-5xl mobile:text-2xl"
            >
              Shopkeeper
            </h1>
            <span
              class="flex"
            >
              <a
                href="/"
              >
                <img
                  alt="company logo"
                  class=" tablet:w-16 mobile:w-9"
                  src="/shopkeeper-logo.svg"
                />
              </a>
            </span>
            <button
              class="flex flex-col justify-center items-center mobile:flex tablet:hidden false"
            >
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm -translate-y-0.5 -translate-y-0.5"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm my-0.5 opacity-100"
              />
              <span
                class="bg-black block transition-all duration-300 ease-out h-0.5 w-6 rounded-sm translate-y-0.5 translate-y-0.5"
              />
            </button>
            <div
              class="mobile:hidden page-links tablet:flex relative items-center"
            >
              <a
                class="home-link border-r px-4 mr-2"
                href="/"
              >
                <div
                  tabindex="0"
                >
                  Home
                </div>
              </a>
              <a
                class="shop-link border-r px-4 pl-4 mr-2"
                href="/shop"
              >
                <div
                  tabindex="0"
                >
                  Shop
                </div>
              </a>
              <button
                class="cart pl-4"
              >
                <img
                  alt="cart"
                  class="w-8"
                  src="/icons/cart.svg"
                  tabindex="0"
                />
                <p
                  class="absolute right-2 bg-pink-400 px-1 rounded-lg text-white"
                >
                  0
                </p>
              </button>
            </div>
          </div>
          <div>
            <p
              class="bg-black text-white tablet:text-sm mobile:text-xs"
            >
              Get 10% off everything in our summer sale! Just use the code: FAKESITE50. Simple!
            </p>
          </div>
        </div>
      </nav>
      <main>
        <div
          class="homepage-wrapper"
        >
          <div
            class="relative bg-auto flex desktop:flex-row mobile:flex-col-reverse items-center desktop:max-h-[67vh]"
          >
            <div
              class="desktop:w-1/2 mobile:w-full mobile:items-center tablet:px-20 mobile:px-4 desktop:pr-0 flex flex-col desktop:items-start z-10 mobile:bg-gray-200/95 desktop:bg-transparent"
            >
              <h1
                class="desktop:text-7xl mobile:text-2xl desktop:my-12 mobile:my-6 font-bold text-[#BF00FF] desktop:text-start tablet:text-center flex-wrap"
                style="opacity: 0; transform: translateY(50px);"
              >
                Shop Smart, Shop Easy!
              </h1>
              <p
                class="desktop:text-2xl mobile:text-sm desktop:mb-12 mobile:mb-6 desktop:text-start tablet:text-center "
                style="opacity: 0; transform: translateY(50px);"
              >
                Looking for all the latest products with the best deals? All in one place? You've come to the right place my friend.
              </p>
              <div
                class="mobile:mb-6 desktop:mb-0"
                style="opacity: 0; transform: translateY(50px);"
              >
                <a
                  class="rounded-lg bg-black desktop:p-3 mobile:p-1 mobile:text-sm desktop:text-lg text-white hover:bg-purple-600 "
                  href="/shop"
                >
                  Shop Now
                </a>
              </div>
            </div>
            <div
              class="tablet:w-1/2 mobile:w-full desktop:pt-16 desktop:pr-20 desktop:flex tablet:max-h-[50vh]  desktop:max-h-[100vh] justify-end overflow-visible inline-block desktop:relative top-0 -z-10"
            >
              <img
                alt="shopping image"
                class="shopping-image tablet:min-h-[46vh]"
                src="/shopping.svg"
                style="opacity: 0; transform: translateY(-50px);"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-evenly p-8 mt-10 text-5xl"
            style="opacity: 0; will-change: opacity;"
          >
            <img
              alt="down arrow"
              class="mobile:hidden tablet:flex tablet:w-16 desktop:w-20 bounce"
              src="/icons/down-arrow.svg"
            />
            <h5
              class="tablet:hidden text-3xl"
            >
              Our current best deals:
            </h5>
            <h1
              class="mobile:hidden tablet:inline-block tablet:text-3xl desktop:text-5xl"
            >
              Click 
              <button
                class="font-bold text-[#FFBF00]"
              >
                here
              </button>
               and see our best deals right now!
            </h1>
            <img
              alt="down arrow"
              class="mobile:hidden tablet:flex tablet:w-16 desktop:w-20 bounce"
              src="/icons/down-arrow.svg"
            />
          </div>
          <div
            class="bg-white flex flex-wrap"
          >
            <div
              class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
            >
              <div
                class="flex flex-col h-full"
              >
                <img
                  alt="item image"
                  class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                  src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
                />
              </div>
              <div
                class="flex-col flex text-left"
              >
                <p
                  class="pt-8 self-start"
                >
                  Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
                </p>
                <div
                  class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                >
                  <p
                    class="font-semibold "
                  >
                    <span
                      class="line-through text-red-500"
                    >
                      £
                      109.95
                    </span>
                    <span>
                        £
                      98.95
                       
                    </span>
                  </p>
                  <p
                    class="flex mobile:pt-2 desktop:p-0"
                  >
                    <div>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gray; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gray; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                    </div>
                    (
                    120
                    )
                  </p>
                </div>
                <button
                  class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                  tabindex="0"
                >
                  Add To Cart
                </button>
              </div>
            </div>
            <div
              class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
            >
              <div
                class="flex flex-col h-full"
              >
                <img
                  alt="item image"
                  class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                  src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
                />
              </div>
              <div
                class="flex-col flex text-left"
              >
                <p
                  class="pt-8 self-start"
                >
                  Mens Casual Premium Slim Fit T-Shirts 
                </p>
                <div
                  class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                >
                  <p
                    class="font-semibold "
                  >
                    <span
                      class="line-through text-red-500"
                    >
                      £
                      22.3
                    </span>
                    <span>
                        £
                      20.07
                       
                    </span>
                  </p>
                  <p
                    class="flex mobile:pt-2 desktop:p-0"
                  >
                    <div>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gray; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                    </div>
                    (
                    259
                    )
                  </p>
                </div>
                <button
                  class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                  tabindex="0"
                >
                  Add To Cart
                </button>
              </div>
            </div>
            <div
              class="mobile:w-full desktop:w-1/3 h-auto bg-white mobile:m-10 p-2 desktop:mx-0 desktop:my-10 flex-col flex"
            >
              <div
                class="flex flex-col h-full"
              >
                <img
                  alt="item image"
                  class="max-w-[50%] max-h-[200px] self-center rounded-2xl"
                  src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
                />
              </div>
              <div
                class="flex-col flex text-left"
              >
                <p
                  class="pt-8 self-start"
                >
                  Mens Cotton Jacket
                </p>
                <div
                  class="flex mobile:flex-col desktop:flex-row py-2 justify-between"
                >
                  <p
                    class="font-semibold "
                  >
                    <span
                      class="line-through text-red-500"
                    >
                      £
                      55.99
                    </span>
                    <span>
                        £
                      50.39
                       
                    </span>
                  </p>
                  <p
                    class="flex mobile:pt-2 desktop:p-0"
                  >
                    <div>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gold; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                      <span
                        class="start"
                        style="cursor: pointer; color: gray; font-size: 15px;"
                      >
                         
                        ★
                         
                      </span>
                    </div>
                    (
                    500
                    )
                  </p>
                </div>
                <button
                  class="p-2 my-2 bg-[#BF00FF] laptop:w-1/3 rounded-lg self-center text-white text-sm mobile:text-xs mobile:w-8/12"
                  tabindex="0"
                >
                  Add To Cart
                </button>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
